Bug fix the ipad alignment test 4

--- a/survey/survey-style.scss
+++ b/survey/survey-style.scss
@@ -66,6 +66,7 @@ input {
     border: none;
     position: relative;
     text-align: left;
+    text-align-last: left;
     cursor: pointer;
     width: auto;
 }
@@ -88,6 +89,7 @@ input {
     border: none;
     position: relative;
     text-align: left;
+    text-align-last: left;
     width: 100%;
     cursor: pointer;
 }
@@ -108,6 +110,10 @@ select {
     background-color: white;
     text-align: center;
     text-align-last: center;
+
+    display: flex; /* Use flexbox */
+    justify-content: center; /* Center the text */
+    align-items: center; /* Center vertically */
 }
 
 option {
